Fixed bug with names with empty space. Shifted score and rules buttons,       added pulsating dealers button.

--- a/static/css.css
+++ b/static/css.css
@@ -450,4 +450,21 @@ background-size:contain;
 	background-color: #8a1717;
 	box-shadow: 1pt 2pt 3pt 2pt rgba(0,0,0,0.5);
 	color: white;
+    opacity: 0.9;
+    animation: pulsate 1s ease-out;
+    animation-iteration-count: 0;
+}
+
+
+
+@keyframes pulsate {
+    0% { 
+        opacity: 0.7;
+    }
+    50% { 
+        opacity: 1.0;
+    }
+    100% { 
+        opacity: 0.7;
+    }
 }
